java jdk proxy and cglib

--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,14 @@
     <artifactId>java.src</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/cglib/cglib-nodep -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <version>3.2.5</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
